# THE-SUPER-BRAIN

./: .clang-format  .dockerignore  .env.production  .env.production.real  .gitignore  .pre-commit-config.yaml  ALL_FIXES_APPLIED.md  ARCHITECTURE_ANALYSIS.md  BUG_FIXES_SUMMARY.md  BUG_FIX_HEALTHCHECK.md  BUG_FIX_LOAD_FROM_RETURN_VALUE.md  BUG_FIX_LOGS_DIRECTORY.md  BUG_FIX_REPORT.md  BUG_FIX_TIMEOUT_TEST.md  BUILD.md  BUILD_DEBUG_SUMMARY.md  BUILD_STATUS_UPGRADED.md  BUILD_UPGRADE_COMPLETE.md  CHANGELOG.md  CHEAT_SHEET.md  COMPLETE_DELIVERY_SUMMARY.md  CONTRIBUTING.md  DEEP_THINK_MODE.md  DEMO_COMPLETE.md  DEMO_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile.core  Dockerfile.gui  Dockerfile.rest  ERROR_CHECK_REPORT.md  FINAL_OPTIMIZATION_STATUS.md  FINAL_UPGRADE_SUMMARY.md  FINAL_UPGRADE_V4.4.0.md  FINAL_VERIFICATION_REPORT.md  FIXES_AND_IMPROVEMENTS.md  FIXES_APPLIED_VERIFICATION.md  GITHUB_READY_SUMMARY.md  GIT_SETUP_GUIDE.md  (+56 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
brain-ai/: CMakeLists.txt  build.sh
brain-ai-gui/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
brain-ai-gui/src/: App.tsx  index.css  main.tsx
brain-ai-gui/src/components/: ChatInterface.tsx
brain-ai-gui/src/lib/: api.ts  utils.ts
brain-ai-gui/src/pages/: AdminPage.tsx  ChatPage.tsx  MonitorPage.tsx  MultiAgentPage.tsx  SearchPage.tsx  TestPage.tsx  UploadPage.tsx
brain-ai-gui/src/types/: index.ts
brain-ai-rest-service/: MIGRATION_TO_V2.md  brain_ai_core.cpython-312-darwin.so.disabled  facts_store.py  requirements.txt
brain-ai-rest-service/app/: agents.py  app.py  app_v2.py  config.py  facts_store.py  llm_deepseek.py  metrics.py  prompts.py  reranker.py  schemas.py  verification.py
brain-ai-rest-service/data/: index.json  test_index.json  test_index.json.metadata.json
brain-ai/bindings/: brain_ai_bindings.cpp  pybind_module.cpp
brain-ai/deepseek-ocr-service/app/: config.py  ocr_engine.py
brain-ai/include/indexing/: index_manager.hpp
brain-ai/python/: pyproject.toml
brain-ai/src/document/: document_processor.cpp  ocr_client.cpp
brain-ai/src/indexing/: index_manager.cpp
brain-ai/tests/: CMakeLists.txt
brain-ai/tests/integration/: test_ocr_integration.cpp
data/: facts.db  index.json  index.json.metadata.json
eval/: eval_set.jsonl  run_eval.py
scripts/: smoke_test.sh  start_production.sh
systemd/: brain-ai-api.service  brain-ai.service
tests/: test_rag_plus_plus.py
